# aktivistisch.de

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  example.env  manage.py  poetry.toml  pyproject.toml
.harness/: deploy.yaml
aktivistisch_web/: asgi.py  seo.py  settings.py  sitemap.py  urls.py  wsgi.py
catalogue/: admin.py  forms.py  models.py  sitemap.py  urls.py  views.py
catalogue/migrations/: 0001_initial.py  0002_alter_projectidea_slug.py  0003_step_name.py  0004_alter_projectidea_effort_note_and_more.py  0005_alter_projectidea_effort_note_and_more.py  0006_alter_projectidea_example.py  0007_alter_projectidea_effort_level_and_more.py  0008_alter_step_idea.py  0009_rename_idea_step_project_idea.py  0010_projectidea_image.py  0011_attachment.py  0012_alter_attachment_attachment_type.py  0013_alter_projectidea_image.py  0014_alter_attachment_name.py  0015_alter_attachment_attachment_type.py  0016_alter_projectidea_slug.py  0017_projectidea_last_updated.py  0018_faq_overviewconfiguration.py  0019_rename_text_overviewconfiguration_overview_text_and_more.py  0020_alter_overviewconfiguration_page_description.py  0021_projectidea_draft.py  0022_remove_projectidea_effort_note_and_more.py  0023_overviewconfiguration_impressum_text.py  0024_faq_draft.py  0025_party_prediction_and_more_squashed_0032_remove_prediction_last_updated.py  0033_alter_party_options_party_border.py  0034_overviewconfiguration_telegram_contact_channel_and_more.py  0035_contactformentry_overviewconfiguration_email_and_more.py
proxy/: Dockerfile  nginx.conf
(+14 files in other folders)
